@@ -17,30 +17,31 @@
 package androidx.build
 
 import androidx.build.uptodatedness.cacheEvenIfNoOutputs
-import java.io.ByteArrayOutputStream
+import com.facebook.ktfmt.format.Formatter
+import com.facebook.ktfmt.format.Formatter.format
 import java.io.File
 import javax.inject.Inject
+import kotlinx.coroutines.Dispatchers
+import kotlinx.coroutines.async
+import kotlinx.coroutines.awaitAll
+import kotlinx.coroutines.coroutineScope
+import kotlinx.coroutines.runBlocking
 import org.gradle.api.DefaultTask
 import org.gradle.api.Project
-import org.gradle.api.file.ConfigurableFileCollection
 import org.gradle.api.file.FileTree
 import org.gradle.api.model.ObjectFactory
 import org.gradle.api.tasks.CacheableTask
-import org.gradle.api.tasks.Classpath
 import org.gradle.api.tasks.InputFiles
 import org.gradle.api.tasks.Internal
 import org.gradle.api.tasks.OutputFiles
 import org.gradle.api.tasks.PathSensitive
 import org.gradle.api.tasks.PathSensitivity
 import org.gradle.api.tasks.TaskAction
-import org.gradle.process.ExecOperations
+import org.intellij.lang.annotations.Language
 
 fun Project.configureKtfmt() {
-    tasks.register("ktFormat", KtfmtFormatTask::class.java) { task ->
-        task.ktfmtClasspath.from(getKtfmtConfiguration())
-    }
+    tasks.register("ktFormat", KtfmtFormatTask::class.java)
     tasks.register("ktCheck", KtfmtCheckTask::class.java) { task ->
-        task.ktfmtClasspath.from(getKtfmtConfiguration())
         task.cacheEvenIfNoOutputs()
     }
 }
@@ -51,29 +52,11 @@ private val ExcludedDirectories = listOf(
 )
 
 private val ExcludedDirectoryGlobs = ExcludedDirectories.map { "**/$it/**/*.kt" }
-private const val MainClass = "com.facebook.ktfmt.cli.Main"
 private const val InputDir = "src"
 private const val IncludedFiles = "**/*.kt"
 
-private fun Project.getKtfmtConfiguration(): ConfigurableFileCollection {
-    return files(
-        configurations.findByName("ktfmt") ?: configurations.create("ktfmt") {
-            val version = getVersionByName("ktfmt")
-            val dependency = dependencies.create("com.facebook:ktfmt:$version")
-            it.dependencies.add(dependency)
-            it.attributes.attribute(bundlingAttribute, "external")
-        }
-    )
-}
-
 @CacheableTask
 abstract class BaseKtfmtTask : DefaultTask() {
-    @get:Inject
-    abstract val execOperations: ExecOperations
-
-    @get:Classpath
-    abstract val ktfmtClasspath: ConfigurableFileCollection
-
     @get:Inject
     abstract val objects: ObjectFactory
 
@@ -108,13 +91,64 @@ abstract class BaseKtfmtTask : DefaultTask() {
     @get:Internal
     var overrideSubdirectories: List<String>? = null
 
-    protected fun getArgsList(dryRun: Boolean): List<String> {
-        val arguments = mutableListOf("--kotlinlang-style")
-        if (dryRun) arguments.add("--dry-run")
-        arguments.addAll(getInputFiles().files.map { it.absolutePath })
-        return arguments
+    protected fun runKtfmt(format: Boolean) {
+        if (getInputFiles().files.isEmpty()) return
+        runBlocking(Dispatchers.IO) {
+            val result = processInputFiles()
+            val incorrectlyFormatted = result.filter {
+                !it.isCorrectlyFormatted
+            }
+            if (incorrectlyFormatted.isNotEmpty()) {
+                if (format) {
+                    incorrectlyFormatted.forEach {
+                        it.input.writeText(it.formattedCode)
+                    }
+                } else {
+                    error(
+                        "Found ${incorrectlyFormatted.size} files that are not correctly " +
+                            "formatted:\n" +
+                            incorrectlyFormatted.map { it.input }.joinToString("\n")
+                    )
+                }
+            }
+        }
+    }
+
+    /**
+     * Run ktfmt on all the files in [getInputFiles] in parallel.
+     */
+    private suspend fun processInputFiles(): List<KtfmtResult> {
+        return coroutineScope {
+            getInputFiles().files.map { async { processFile(it) } }.awaitAll()
+        }
+    }
+
+    /**
+     * Run ktfmt on the [input] file.
+     */
+    private fun processFile(input: File): KtfmtResult {
+        // To hack around https://github.com/facebook/ktfmt/issues/406 we rewrite all the
+        // @sample tags to ####### so that ktfmt would not move them around. We then
+        // rewrite it back when returning the formatted code.
+        val originCode = input.readText().replace(SAMPLE, PLACEHOLDER)
+        val formattedCode = format(Formatter.KOTLINLANG_FORMAT, originCode)
+        return KtfmtResult(
+            input = input,
+            isCorrectlyFormatted = originCode == formattedCode,
+            formattedCode = formattedCode.replace(PLACEHOLDER, SAMPLE)
+        )
     }
 }
+
+// Keep two of them the same length to make sure line wrapping works as expected
+private const val SAMPLE = "@sample"
+private const val PLACEHOLDER = "#######"
+
+internal data class KtfmtResult(
+    val input: File,
+    val isCorrectlyFormatted: Boolean,
+    @Language("kotlin") val formattedCode: String,
+)
 
 @CacheableTask
 abstract class KtfmtFormatTask : BaseKtfmtTask() {
@@ -129,14 +163,7 @@ abstract class KtfmtFormatTask : BaseKtfmtTask() {
 
     @TaskAction
     fun runFormat() {
-        if (getInputFiles().files.isEmpty()) return
-        execOperations.javaexec { javaExecSpec ->
-            javaExecSpec.mainClass.set(MainClass)
-            javaExecSpec.classpath = ktfmtClasspath
-            javaExecSpec.args = getArgsList(dryRun = false)
-            javaExecSpec.jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-            overrideDirectory?.let { javaExecSpec.workingDir = it }
-        }
+        runKtfmt(format = true)
     }
 }
 
@@ -149,19 +176,6 @@ abstract class KtfmtCheckTask : BaseKtfmtTask() {
 
     @TaskAction
     fun runCheck() {
-        if (getInputFiles().files.isEmpty()) return
-        val outputStream = ByteArrayOutputStream()
-        execOperations.javaexec { javaExecSpec ->
-            javaExecSpec.standardOutput = outputStream
-            javaExecSpec.mainClass.set(MainClass)
-            javaExecSpec.classpath = ktfmtClasspath
-            javaExecSpec.args = getArgsList(dryRun = true)
-            javaExecSpec.jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-            overrideDirectory?.let { javaExecSpec.workingDir = it }
-        }
-        val output = outputStream.toString()
-        if (output.isNotEmpty()) {
-            throw Exception("Failed check for the following files:\n$output")
-        }
+        runKtfmt(format = false)
     }
 }
